# recipe-app-api

./: Dockerfile  docker-compose-deploy.yml  docker-compose.yml  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
.github/workflows/: checks.yml
app/: .flake8
app/app/: settings.py  tests.py  urls.py
app/core/: admin.py  models.py
app/core/management/commands/: wait_for_db.py
app/core/migrations/: 0001_initial.py  0002_recipe.py  0003_tag.py  0004_recipe_tags.py  0005_ingredient.py  0006_recipe_ingredients.py  0007_recipe_image.py
app/core/tests/: test_admin.py  test_commands.py  test_models.py
app/recipe/: serialisers.py  urls.py  views.py
app/recipe/tests/: test_ingredients_api.py  test_recipe_api.py  test_tags_api.py
app/user/: serialisers.py  views.py
app/user/tests/: test_user_api.py
proxy/: Dockerfile
